--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Create dir
       run: mkdir ./newArchive
     - name : cp chromedriver
-      run: cp ./WebScraper/bin/Debug/net5.0/chromedriver.exe ./newArchive
-    - name : cp webscraper
+      run: cp ./DermaScan/bin/Debug/net5.0/chromedriver.exe ./newArchive
+    - name : cp DermaScan
       run: cp /home/runner/work/DermaScan/DermaScan/DermaScan/bin/Release/net5.0/win10-x64/publish/**.exe ./newArchive
     
 
